--- a/index.html
+++ b/index.html
@@ -132,26 +132,26 @@
 <div class="main-content">
   <header data-aos="fade-down">
     <h1>CHizzBoy | WEB DEVELOPER </h1>
-    <img src="/images/IMG_20230913_030712_365.jpg" alt="Hero Banner" class="hero-img" />
+    <img src="IMG_20230913_030712_365.jpg" alt="Hero Banner" class="hero-img" />
     <p>Namibian coder, dancer, caller-connector, buy/sell, food lover and chill master.</p>
    <button> Get Your WEbsite</button>
   </header>
 
   <section class="intro-section" data-aos="zoom-in">
     <h2>Who We Are</h2>
-    <img src="/images/Small Giant - Vehicle Branding.png" alt="Hero Banner" class="hero-img" />
+    <img src="Small Giant - Vehicle Branding.png" alt="Hero Banner" class="hero-img" />
     <p class="slogan">"Code. Connect. Create."</p>
     <p>Small Giant Inv cc is a passion-driven Namibian brand blending tech, creativity, and hustle. We connect, build, and vibe with vision.</p>
 
     <div class="card-container">
       <div class="info-card" data-aos="flip-left">
         <h3>Our Mission</h3>
-        <img src="/images/pexels-markusspiske-3039036.jpg" alt="Card 1" />
+        <img src="pexels-markusspiske-3039036.jpg" alt="Card 1" />
         <p>To empower communities through digital solutions and creative collaboration.</p>
       </div>
       <div class="info-card" data-aos="flip-right">
         <h3>Our Vision</h3>
-        <img src="/images/4192286-small - Copy.png" alt="Card 2" />
+        <img src="4192286-small - Copy.png" alt="Card 2" />
         <p>Building a future where tech meets local flavor and culture leads innovation.</p>
       </div>
     </div>
@@ -159,7 +159,7 @@
 
   <section class="benefits-section" data-aos="fade-right">
     <h2>Benefits For You</h2>
-    <img src="/images/614-6147727_wide-stance-squat-with-barbell-stick-figure-back - Copy.png" alt="Benefits" />
+    <img src="images/614-6147727_wide-stance-squat-with-barbell-stick-figure-back - Copy.png" alt="Benefits" />
     <ul>
       <li>Creative Web Development turn your business into a virtual shop</li>
       <li>Real Talk, Real Connection , Real money thats what you Aquire with us</li>
@@ -175,15 +175,15 @@
     <div class="carousel">
       <div class="carousel-track">
         <div class="carousel-card">
-          <img src="/images/pexels-diva-plavalaguna-6147381.jpg" alt="Project 1" />
+          <img src="pexels-diva-plavalaguna-6147381.jpg" alt="Project 1" />
           <p>Chizzy Studio <br><em>www.chizzystudio.com</em></p>
         </div>
         <div class="carousel-card">
-          <img src="/images/pexels-divinetechygirl-1181461.jpg" alt="Project 2" />
+          <img src="pexels-divinetechygirl-1181461.jpg" alt="Project 2" />
           <p>Chizzy Tube <br><em>www.chizzytube.com</em></p>
         </div>
         <div class="carousel-card">
-          <img src="/images/pexels-a-darmel-7743253.jpg" alt="Project 3" />
+          <img src="pexels-a-darmel-7743253.jpg" alt="Project 3" />
           <p>Chizzy Rentals <br><em>www.chizzye-learning.com</em></p>
         </div>
       </div>
@@ -192,14 +192,14 @@
 
   <section class="contact-section" data-aos="fade-up">
     <h2>Contact</h2>
-    <img src="/images/pexels-morningtrain-18105.jpg" alt="Contact" />
+    <img src="pexels-morningtrain-18105.jpg" alt="Contact" />
     <p>Email: <a href="mailto:smallgiant105@gmail.com">smallgiant.com</a></p>
     <p>Phone: +264-81-264-3563</p>
   </section>
 
   <section class="subscribe-section" data-aos="fade-left">
     <h2>Subscribe</h2>
-    <img src="/images/IMG_20240112_045611_440.jpg" alt="Subscribe" />
+    <img src="IMG_20240112_045611_440.jpg" alt="Subscribe" />
     <form onsubmit="alert('Thanks for subscribing!'); return false;">
       <input type="email" placeholder="Enter your email" required />
       <button type="submit">Subscribe</button>
