--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <div class="main-content">
   <header data-aos="fade-down">
     <h1>CHizzBoy | WEB DEVELOPER </h1>
-    <img src="IMG_20230913_030712_365.jpg" alt="Hero Banner" class="hero-img" />
+    <img src="pexels-sebastiaan9977-1097456.jpg" alt="Hero Banner" class="hero-img" />
     <p>Namibian coder, dancer, caller-connector, buy/sell, food lover and chill master.</p>
    <button> Get Your WEbsite</button>
   </header>
