--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </header>
 
   <section class="intro-section" data-aos="zoom-in">
-    <h2>Who We Are</h2>
+   <center> <h2>Who We Are</h2>
     <img src="Small Giant - Vehicle Branding.png" alt="Hero Banner" class="hero-img" />
     <p class="slogan">"Code. Connect. Create."</p>
     <p>Small Giant Inv cc is a passion-driven Namibian brand blending tech, creativity, and hustle. We connect, build, and vibe with vision.</p>
@@ -146,15 +146,14 @@
     <div class="card-container">
       <div class="info-card" data-aos="flip-left">
         <h3>Our Mission</h3>
-        <img src="pexels-markusspiske-3039036.jpg" alt="Card 1" />
         <p>To empower communities through digital solutions and creative collaboration.</p>
       </div>
       <div class="info-card" data-aos="flip-right">
         <h3>Our Vision</h3>
-        <img src="4192286-small - Copy.png" alt="Card 2" />
         <p>Building a future where tech meets local flavor and culture leads innovation.</p>
       </div>
     </div>
+     </center>
   </section>
 
   <section class="benefits-section" data-aos="fade-right">
