--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   </style>
 </head>
 <body>
-
+ <center>
 <div class="main-content">
   <header data-aos="fade-down">
     <h1>CHizzBoy | WEB DEVELOPER </h1>
@@ -138,7 +138,7 @@
   </header>
 
   <section class="intro-section" data-aos="zoom-in">
-   <center> <h2>Who We Are</h2>
+   <h2>Who We Are</h2>
     <img src="Small Giant - Vehicle Branding.png" alt="Hero Banner" class="hero-img" />
     <p class="slogan">"Code. Connect. Create."</p>
     <p>Small Giant Inv cc is a passion-driven Namibian brand blending tech, creativity, and hustle. We connect, build, and vibe with vision.</p>
@@ -153,7 +153,6 @@
         <p>Building a future where tech meets local flavor and culture leads innovation.</p>
       </div>
     </div>
-     </center>
   </section>
 
   <section class="benefits-section" data-aos="fade-right">
@@ -204,6 +203,7 @@
       <button type="submit">Subscribe</button>
     </form>
   </section>
+     </center>
 
 <!--
   <div class="mb-4">
