--- a/index.html
+++ b/index.html
@@ -127,45 +127,197 @@
     }
   </style>
 </head>
-<body>
+<body >
+
  <center>
-<div class="main-content">
-  <header data-aos="fade-down">
-    <h1>CHizzBoy | WEB DEVELOPER </h1>
-    <img src="pexels-sebastiaan9977-1097456.jpg" alt="Hero Banner" class="hero-img" />
-    <p>Namibian coder, dancer, caller-connector, buy/sell, food lover and chill master.</p>
-   <button> Get Your WEbsite</button>
+<div class="main-content" style="margin: 0; background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); color: white;">
+
+    <nav style="width: 100%; background: #1a1a1a; padding: 15px 25px; 
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1); font-family: Arial, sans-serif; 
+            display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
+
+  <!-- Brand -->
+  <div style="color: #fff; font-size: 22px; font-weight: bold;">CHizzBoy</div>
+
+  <!-- Hamburger Icon -->
+  <div onclick="toggleMenu()" style="cursor: pointer; display: none; flex-direction: column; gap: 5px;" id="hamburger">
+    <div style="width: 25px; height: 3px; background: #fff;"></div>
+    <div style="width: 25px; height: 3px; background: #fff;"></div>
+    <div style="width: 25px; height: 3px; background: #fff;"></div>
+  </div>
+
+  <!-- Nav Links -->
+  <div id="nav-links"
+    style="display: flex; gap: 20px; align-items: center; flex-wrap: wrap; 
+           transition: max-height 0.3s ease; overflow: hidden;">
+
+    <a href="#portfolio" style="color: #fff; text-decoration: none; font-size: 16px;">Portfolio</a>
+    <a href="#support" style="color: #fff; text-decoration: none; font-size: 16px;">Support</a>
+    <a href="#contact" style="color: #fff; text-decoration: none; font-size: 16px;">Contact</a>
+  </div>
+
+  <!-- Responsive Script -->
+  <script>
+    function toggleMenu() {
+      const nav = document.getElementById("nav-links");
+      if (nav.style.display === "flex") {
+        nav.style.display = "none";
+      } else {
+        nav.style.display = "flex";
+        nav.style.flexDirection = "column";
+        nav.style.width = "100%";
+        nav.style.marginTop = "15px";
+        nav.style.textAlign = "left";
+      }
+    }
+
+    // Responsive show/hide hamburger
+    window.addEventListener('resize', function () {
+      const nav = document.getElementById("nav-links");
+      const burger = document.getElementById("hamburger");
+      if (window.innerWidth <= 768) {
+        burger.style.display = "flex";
+        nav.style.display = "none";
+      } else {
+        burger.style.display = "none";
+        nav.style.display = "flex";
+        nav.style.flexDirection = "row";
+        nav.style.width = "auto";
+        nav.style.marginTop = "0";
+        nav.style.textAlign = "center";
+      }
+    });
+    window.dispatchEvent(new Event('resize'));
+  </script>
+</nav>
+
+
+    <header data-aos="fade-down"
+    style="max-width: 900px; margin: 40px auto; padding: 30px 20px; 
+           background: linear-gradient(135deg, #ffffff, #f2f2f2); 
+           box-shadow: 0 8px 20px rgba(0,0,0,0.1); 
+           text-align: center; border-radius: 15px; 
+           font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+  
+    <h1 style="font-size: 32px; margin-bottom: 15px; color: #222;">
+      CHizzBoy | <span style="color: #ff4b5c;">WEB DEVELOPER</span>
+    </h1>
+  
+    <img src="pexels-sebastiaan9977-1097456.jpg" alt="Hero Banner"
+      style="width: 100%; max-height: 300px; object-fit: cover; 
+             border-radius: 12px; margin: 20px 0; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+  
+    <p style="font-size: 16px; color: #555; max-width: 700px; margin: 0 auto 25px;">
+      Namibian coder, dancer, caller-connector, buy/sell expert, food lover, and chill master.
+    </p>
+  
+    <button onclick="alert('Let’s build your website!')" 
+      style="background-color: #ff4b5c; color: #fff; border: none; padding: 12px 30px; 
+             border-radius: 30px; font-size: 16px; cursor: pointer; 
+             transition: transform 0.3s ease, box-shadow 0.3s ease;">
+      Get Your Website
+    </button>
+  
+    <!-- Hover Effect Script -->
+    <script>
+      const btn = document.querySelector("header button");
+      btn.addEventListener("mouseover", () => {
+        btn.style.transform = "scale(1.05)";
+        btn.style.boxShadow = "0 4px 12px rgba(0,0,0,0.2)";
+      });
+      btn.addEventListener("mouseout", () => {
+        btn.style.transform = "scale(1)";
+        btn.style.boxShadow = "none";
+      });
+    </script>
   </header>
+  
 
-  <section class="intro-section" data-aos="zoom-in">
-   <h2>Who We Are</h2>
-    <img src="Small Giant - Vehicle Branding.png" alt="Hero Banner" class="hero-img" />
-    <p class="slogan">"Code. Connect. Create."</p>
-    <p>Small Giant Inv cc is a passion-driven Namibian brand blending tech, creativity, and hustle. We connect, build, and vibe with vision.</p>
+  <section class="intro-section" data-aos="zoom-in"
+  style="max-width: 1000px; margin: 60px auto; padding: 40px 25px; 
+         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+         background: linear-gradient(135deg, #ffffff, #f8f8f8); 
+         box-shadow: 0 8px 24px rgba(0,0,0,0.08); 
+         border-radius: 16px; text-align: center; color: #333;">
 
-    <div class="card-container">
-      <div class="info-card" data-aos="flip-left">
-        <h3>Our Mission</h3>
-        <p>To empower communities through digital solutions and creative collaboration.</p>
-      </div>
-      <div class="info-card" data-aos="flip-right">
-        <h3>Our Vision</h3>
-        <p>Building a future where tech meets local flavor and culture leads innovation.</p>
-      </div>
+  <h2 style="font-size: 32px; margin-bottom: 25px; color: #222; letter-spacing: 1px;">
+    Who We Are
+  </h2>
+  
+  <img src="Small Giant - Vehicle Branding.png" alt="Hero Banner" class="hero-img"
+    style="width: 100%; max-height: 340px; object-fit: cover; border-radius: 14px; 
+           display: block; margin: 0 auto 30px; box-shadow: 0 6px 18px rgba(0,0,0,0.12);">
+  
+  <p class="slogan"
+    style="font-size: 20px; font-weight: 600; color: #444; 
+           margin-bottom: 15px; font-style: italic;">
+    "Code. Connect. Create."
+  </p>
+  
+  <p style="font-size: 16px; line-height: 1.6; color: #555; 
+           max-width: 750px; margin: 0 auto;">
+    Small Giant Inv cc is a passion-driven Namibian brand blending tech, creativity, and hustle.
+    We connect, build, and vibe with vision. Whether it’s code, design, or collaboration, we bring 
+    local culture into the digital space with innovation and heart.
+  </p>
+</section>
+
+
+  <!-- Card Container -->
+  <div class="card-container" 
+    style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; margin-top: 30px;">
+    
+    <!-- Card 1 -->
+    <div class="info-card" data-aos="flip-left"
+      style="flex: 1 1 300px; background: #f9f9f9; padding: 20px; border-radius: 10px; 
+             box-shadow: 0 4px 15px rgba(0,0,0,0.1); transition: transform 0.3s ease;
+             text-align: center;">
+      <h3 style="margin-bottom: 10px; color: #333;">Our Mission</h3>
+      <p style="color: #555; font-size: 15px;">
+        To empower communities through digital solutions and creative collaboration.
+      </p>
     </div>
-  </section>
 
-  <section class="benefits-section" data-aos="fade-right">
-    <h2>Benefits For You</h2>
-    <img src="images/614-6147727_wide-stance-squat-with-barbell-stick-figure-back - Copy.png" alt="Benefits" />
-    <ul>
-      <li>Creative Web Development turn your business into a virtual shop</li>
-      <li>Real Talk, Real Connection , Real money thats what you Aquire with us</li>
-      <li>Fast & Affordable Solutions Investing wisely into your business </li>
-      <li>Elegent & Simple Solutions to your problems</li>
-      <li>Transparent & One Time fee done deal and have a meal</li>
+    <!-- Card 2 -->
+    <div class="info-card" data-aos="flip-right"
+      style="flex: 1 1 300px; background: #f9f9f9; padding: 20px; border-radius: 10px; 
+             box-shadow: 0 4px 15px rgba(0,0,0,0.1); transition: transform 0.3s ease;
+             text-align: center;">
+      <h3 style="margin-bottom: 10px; color: #333;">Our Vision</h3>
+      <p style="color: #555; font-size: 15px;">
+        Building a future where tech meets local flavor and culture leads innovation.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+
+  <section class="benefits-section" data-aos="fade-right"
+  style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center;
+         max-width: 1000px; margin: 40px auto; background-color: #fff; 
+         box-shadow: 0 4px 20px rgba(0,0,0,0.1); border-radius: 10px; 
+         overflow: hidden; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+
+  <!-- Hero Image Column -->
+  <div style="flex: 1 1 40%; min-width: 300px;">
+    <img src="images/614-6147727_wide-stance-squat-with-barbell-stick-figure-back - Copy.png" alt="Benefits"
+      style="width: 100%; height: 100%; object-fit: cover; display: block;">
+  </div>
+
+  <!-- Text Content Column -->
+  <div style="flex: 1 1 60%; padding: 30px; box-sizing: border-box; color: #333;">
+    <h2 style="font-size: 28px; margin-bottom: 20px;">Benefits For You</h2>
+    <ul style="list-style: none; padding: 0; margin: 0; font-size: 16px; line-height: 1.6;">
+      <li style="margin-bottom: 10px;">✅ Creative Web Development turns your business into a virtual shop</li>
+      <li style="margin-bottom: 10px;">✅ Real Talk, Real Connection, Real money — that's what you acquire with us</li>
+      <li style="margin-bottom: 10px;">✅ Fast & Affordable Solutions — invest wisely into your business</li>
+      <li style="margin-bottom: 10px;">✅ Elegant & Simple Solutions to your problems</li>
+      <li style="margin-bottom: 10px;">✅ Transparent & One-Time Fee — done deal, now have a meal</li>
     </ul>
-  </section>
+  </div>
+</section>
+
 
   <section class="projects-section" data-aos="zoom-in-up">
     <h2>Projects | Works</h2>
@@ -182,27 +334,76 @@
         </div>
         <div class="carousel-card">
           <img src="pexels-a-darmel-7743253.jpg" alt="Project 3" />
-          <p>Chizzy Rentals <br><em>www.chizzye-learning.com</em></p>
+          <p>Chizzy E-Learning <br><em>www.chizzye-learning.com</em></p>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="contact-section" data-aos="fade-up">
-    <h2>Contact</h2>
-    <img src="pexels-morningtrain-18105.jpg" alt="Contact" />
-    <p>Email: <a href="mailto:smallgiant105@gmail.com">smallgiant.com</a></p>
-    <p>Phone: +264-81-264-3563</p>
-  </section>
+  <section class="contact-section" data-aos="fade-up"
+  style="position: relative; width: 100%; max-width: 600px; margin: 40px auto; 
+         font-family: Arial, sans-serif; box-shadow: 0 4px 15px rgba(0,0,0,0.1); 
+         border-radius: 10px; overflow: hidden;">
 
-  <section class="subscribe-section" data-aos="fade-left">
-    <h2>Subscribe</h2>
-    <img src="IMG_20240112_045611_440.jpg" alt="Subscribe" />
-    <form onsubmit="alert('Thanks for subscribing!'); return false;">
-      <input type="email" placeholder="Enter your email" required />
-      <button type="submit">Subscribe</button>
-    </form>
-  </section>
+  <img src="pexels-morningtrain-18105.jpg" alt="Contact"
+    style="width: 100%; height: auto; display: block;">
+
+  <!-- Overlay Content -->
+  <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+              color: white; text-align: center; padding: 20px; 
+              background: rgba(0, 0, 0, 0.5); border-radius: 10px; width: 90%;">
+    <h2 style="font-size: 28px; margin-bottom: 10px; text-shadow: 0 2px 5px rgba(0,0,0,0.7);">Contact</h2>
+    <p style="margin: 5px 0; font-size: 16px; text-shadow: 0 1px 3px rgba(0,0,0,0.6);">
+      Email: <a href="mailto:smallgiant105@gmail.com" 
+      style="color: #ffeb3b; text-decoration: underline;">smallgiant.com</a>
+    </p>
+    <p style="margin: 5px 0; font-size: 16px; text-shadow: 0 1px 3px rgba(0,0,0,0.6);">
+      Phone: +264-81-264-3563
+    </p>
+  </div>
+</section>
+
+
+  <section class="subscribe-section" data-aos="fade-left"
+  style="position: relative; width: 100%; max-width: 600px; margin: 40px auto; padding: 20px;
+         background: linear-gradient(135deg, #f0f0f0, #e0e0e0); box-shadow: 0 4px 20px rgba(0,0,0,0.1); 
+         border-radius: 10px; text-align: center; font-family: Arial, sans-serif;">
+  
+  <h2 style="margin-bottom: 15px; font-size: 24px; color: #333;">Subscribe</h2>
+  
+  <div style="position: relative;">
+    <img src="IMG_20240112_045611_440.jpg" alt="Subscribe"
+         style="width: 100%; height: auto; border-radius: 8px; display: block;">
+    
+    <button type="submit" onclick="alert('Thanks for subscribing!'); return false;"
+      style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+             background-color: #ff5e5e; color: white; border: none; padding: 12px 25px; 
+             border-radius: 25px; font-size: 16px; cursor: pointer; 
+             transition: transform 0.3s ease, box-shadow 0.3s ease;">
+      Subscribe
+    </button>
+  </div>
+
+  <form onsubmit="alert('Thanks for subscribing!'); return false;"
+    style="margin-top: 20px; display: flex; flex-direction: column; align-items: center; gap: 10px;">
+    <input type="email" placeholder="Enter your email" required
+      style="padding: 10px 15px; width: 80%; max-width: 300px; border: 1px solid #ccc; 
+             border-radius: 5px; font-size: 14px;">
+  </form>
+
+  <!-- Hover effect script -->
+  <script>
+    document.querySelector('section button').addEventListener('mouseover', function() {
+      this.style.transform = 'translate(-50%, -50%) scale(1.1)';
+      this.style.boxShadow = '0 4px 10px rgba(0,0,0,0.2)';
+    });
+    document.querySelector('section button').addEventListener('mouseout', function() {
+      this.style.transform = 'translate(-50%, -50%) scale(1)';
+      this.style.boxShadow = 'none';
+    });
+  </script>
+</section>
+
      </center>
 
 <!--
@@ -215,12 +416,12 @@
     </select>
 </div>
 -->
-
-  <footer data-aos="fade-in">
-    <p>© 2025 Small Giant Inv cc. All rights reserved.</p>
-  </footer>
-</div>
-
+<div>
+    <footer data-aos="fade-in" style="background-color: #f8f8f8; text-align: center; padding: 20px 10px; font-size: 14px; color: #555; border-top: 1px solid #ddd; font-family: Arial, sans-serif;">
+      <p style="margin: 0;">© 2025 Small Giant Inv cc. All rights reserved.</p>
+    </footer>
+  </div>
+  
 <!-- AOS JS -->
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
@@ -235,4 +436,3 @@
 
 </body>
 </html>
-
