--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
            text-align: center; border-radius: 15px; 
            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
   
-    <h1 style="font-size: 32px; margin-bottom: 15px; color: #222;">
+    <h1 style="font-size: 32px; margin-bottom: 15px; color: #222;"data-aos="fade-in" data-aos-delay="500">
       CHizzBoy | <span style="color: #ff4b5c;">WEB DEVELOPER</span>
     </h1>
   
@@ -207,14 +207,14 @@
       style="width: 100%; max-height: 300px; object-fit: cover; 
              border-radius: 12px; margin: 20px 0; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
   
-    <p style="font-size: 16px; color: #555; max-width: 700px; margin: 0 auto 25px;">
+    <p style="font-size: 16px; color: #555; max-width: 700px; margin: 0 auto 25px;" data-aos="fade-in" data-aos-delay="600">
       Namibian coder, dancer, caller-connector, buy/sell expert, food lover, and chill master.
     </p>
   
     <button onclick="alert('Let’s build your website!')" 
       style="background-color: #ff4b5c; color: #fff; border: none; padding: 12px 30px; 
              border-radius: 30px; font-size: 16px; cursor: pointer; 
-             transition: transform 0.3s ease, box-shadow 0.3s ease;">
+             transition: transform 0.3s ease, box-shadow 0.3s ease;" data-aos="fade-in" data-aos-delay="700">
       Get Your Website
     </button>
   
@@ -240,7 +240,7 @@
          box-shadow: 0 8px 24px rgba(0,0,0,0.08); 
          border-radius: 16px; text-align: center; color: #333;">
 
-  <h2 style="font-size: 32px; margin-bottom: 25px; color: #222; letter-spacing: 1px;">
+  <h2 style="font-size: 32px; margin-bottom: 25px; color: #222; letter-spacing: 1px;" data-aos="fade-in" data-aos-delay="500">
     Who We Are
   </h2>
   
@@ -250,12 +250,12 @@
   
   <p class="slogan"
     style="font-size: 20px; font-weight: 600; color: #444; 
-           margin-bottom: 15px; font-style: italic;">
+           margin-bottom: 15px; font-style: italic;" data-aos="fade-in" data-aos-delay="600">
     "Code. Connect. Create."
   </p>
   
   <p style="font-size: 16px; line-height: 1.6; color: #555; 
-           max-width: 750px; margin: 0 auto;">
+           max-width: 750px; margin: 0 auto;" data-aos="fade-in" data-aos-delay="750">
     Small Giant Inv cc is a passion-driven Namibian brand blending tech, creativity, and hustle.
     We connect, build, and vibe with vision. Whether it’s code, design, or collaboration, we bring 
     local culture into the digital space with innovation and heart.
@@ -268,12 +268,12 @@
     style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; margin-top: 30px;">
     
     <!-- Card 1 -->
-    <div class="info-card" data-aos="flip-left"
+    <div class="info-card" data-aos="zoom-in"
       style="flex: 1 1 300px; background: #f9f9f9; padding: 20px; border-radius: 10px; 
              box-shadow: 0 4px 15px rgba(0,0,0,0.1); transition: transform 0.3s ease;
              text-align: center;">
-      <h3 style="margin-bottom: 10px; color: #333;">Our Mission</h3>
-      <p style="color: #555; font-size: 15px;">
+      <h3 style="margin-bottom: 10px; color: #333;" data-aos="fade-in" data-aos-delay="500">Our Mission</h3>
+      <p style="color: #555; font-size: 15px;"data-aos="fade-in" data-aos-delay="600">
         To empower communities through digital solutions and creative collaboration.
       </p>
     </div>
@@ -283,8 +283,8 @@
       style="flex: 1 1 300px; background: #f9f9f9; padding: 20px; border-radius: 10px; 
              box-shadow: 0 4px 15px rgba(0,0,0,0.1); transition: transform 0.3s ease;
              text-align: center;">
-      <h3 style="margin-bottom: 10px; color: #333;">Our Vision</h3>
-      <p style="color: #555; font-size: 15px;">
+      <h3 style="margin-bottom: 10px; color: #333;" data-aos="fade-in" data-aos-delay="500">Our Vision</h3>
+      <p style="color: #555; font-size: 15px;"data-aos="fade-in" data-aos-delay="600">
         Building a future where tech meets local flavor and culture leads innovation.
       </p>
     </div>
@@ -301,38 +301,49 @@
 
   <!-- Hero Image Column -->
   <div style="flex: 1 1 40%; min-width: 300px;">
+    <h2 style="font-size: 28px; margin-bottom: 20px;" data-aos="fade-in" data-aos-delay="500">Benefits For You</h2>
     <img src="images/614-6147727_wide-stance-squat-with-barbell-stick-figure-back - Copy.png" alt="Benefits"
       style="width: 100%; height: 100%; object-fit: cover; display: block;">
   </div>
 
   <!-- Text Content Column -->
   <div style="flex: 1 1 60%; padding: 30px; box-sizing: border-box; color: #333;">
-    <h2 style="font-size: 28px; margin-bottom: 20px;">Benefits For You</h2>
     <ul style="list-style: none; padding: 0; margin: 0; font-size: 16px; line-height: 1.6;">
-      <li style="margin-bottom: 10px;">✅ Creative Web Development turns your business into a virtual shop</li>
-      <li style="margin-bottom: 10px;">✅ Real Talk, Real Connection, Real money — that's what you acquire with us</li>
-      <li style="margin-bottom: 10px;">✅ Fast & Affordable Solutions — invest wisely into your business</li>
-      <li style="margin-bottom: 10px;">✅ Elegant & Simple Solutions to your problems</li>
-      <li style="margin-bottom: 10px;">✅ Transparent & One-Time Fee — done deal, now have a meal</li>
+      <li style="margin-bottom: 10px;" data-aos="fade-in" data-aos-delay="100">
+        ✅ Creative Web Development turns your business into a virtual shop
+      </li>
+      <li style="margin-bottom: 10px;" data-aos="fade-in" data-aos-delay="200">
+        ✅ Real Talk, Real Connection, Real money — that's what you acquire with us
+      </li>
+      <li style="margin-bottom: 10px;" data-aos="fade-in" data-aos-delay="300">
+        ✅ Fast & Affordable Solutions — invest wisely into your business
+      </li>
+      <li style="margin-bottom: 10px;" data-aos="fade-in" data-aos-delay="400">
+        ✅ Elegant & Simple Solutions to your problems
+      </li>
+      <li style="margin-bottom: 10px;" data-aos="fade-in" data-aos-delay="500">
+        ✅ Transparent & One-Time Fee — done deal, now have a meal
+      </li>
     </ul>
   </div>
+  
 </section>
 
 
   <section class="projects-section" data-aos="zoom-in-up">
-    <h2>Projects | Works</h2>
-    <p>Explore some of our exciting builds and collaborations.</p>
+    <h2 data-aos="fade-in" data-aos-delay="500">Projects | Works</h2>
+    <p data-aos="fade-in" data-aos-delay="600">Explore some of our exciting builds and collaborations.</p>
     <div class="carousel">
       <div class="carousel-track">
-        <div class="carousel-card">
+        <div class="carousel-card" data-aos="fade-in" data-aos-delay="500">
           <img src="pexels-diva-plavalaguna-6147381.jpg" alt="Project 1" />
           <p>Chizzy Studio <br><em>www.chizzystudio.com</em></p>
         </div>
-        <div class="carousel-card">
+        <div class="carousel-card" data-aos="fade-in" data-aos-delay="600">
           <img src="pexels-divinetechygirl-1181461.jpg" alt="Project 2" />
           <p>Chizzy Tube <br><em>www.chizzytube.com</em></p>
         </div>
-        <div class="carousel-card">
+        <div class="carousel-card" data-aos="fade-in" data-aos-delay="700">
           <img src="pexels-a-darmel-7743253.jpg" alt="Project 3" />
           <p>Chizzy E-Learning <br><em>www.chizzye-learning.com</em></p>
         </div>
@@ -379,7 +390,7 @@
       style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
              background-color: #ff5e5e; color: white; border: none; padding: 12px 25px; 
              border-radius: 25px; font-size: 16px; cursor: pointer; 
-             transition: transform 0.3s ease, box-shadow 0.3s ease;">
+             transition: transform 0.3s ease, box-shadow 0.3s ease;" data-aos="fade-in" data-aos-delay="500">
       Subscribe
     </button>
   </div>
