added survey page

--- a/html/index.html
+++ b/html/index.html
@@ -132,14 +132,14 @@
 <div class="main-content">
   <header data-aos="fade-down">
     <h1>CHizzBoy | WEB DEVELOPER </h1>
-    <img src="/images/IMG_20230913_030712_365.jpg" alt="Hero Banner" class="hero-img" />
+    <img src="IMG_20230913_030712_365.jpg" alt="Hero Banner" class="hero-img" />
     <p>Namibian coder, dancer, caller-connector, buy/sell, food lover and chill master.</p>
    <button> Get Your WEbsite</button>
   </header>
 
   <section class="intro-section" data-aos="zoom-in">
     <h2>Who We Are</h2>
-    <img src="/images/Small Giant - Vehicle Branding.png" alt="Hero Banner" class="hero-img" />
+    <img src="Small Giant - Vehicle Branding.png" alt="Hero Banner" class="hero-img" />
     <p class="slogan">"Code. Connect. Create."</p>
     <p>Small Giant Inv cc is a passion-driven Namibian brand blending tech, creativity, and hustle. We connect, build, and vibe with vision.</p>
 
