--- a/html/index.html
+++ b/html/index.html
@@ -134,7 +134,8 @@
     <h1>CHizzBoy | WEB DEVELOPER </h1>
     <img src="IMG_20230913_030712_365.jpg" alt="Hero Banner" class="hero-img" />
     <p>Namibian coder, dancer, caller-connector, buy/sell, food lover and chill master.</p>
-   <button> Get Your WEbsite</button>
+    <a href="/survey.html"> <button> Play Now </button> </a>
+    <a href="#"> <button > Website Qoutation </button> </a>
   </header>
 
   <section class="intro-section" data-aos="zoom-in">
