--- a/index.html
+++ b/index.html
@@ -278,21 +278,21 @@
 
   <header data-aos="fade-up" data-aos-delay="100">
     <h1>WEB DEVELOPER</h1>
-    <img src="/pexels-sebastiaan9977-1097456.jpg" alt="Hero Banner" data-aos="zoom-in" data-aos-delay="200"/>
+    <img src="pexels-sebastiaan9977-1097456.jpg" alt="Hero Banner" data-aos="zoom-in" data-aos-delay="200"/>
     <p data-aos="fade-up" data-aos-delay="300">Namibian coder, dancer, caller-connector, buy/sell expert, food lover, and chill master.</p>
-    <button onclick="alert('Let’s build your website!')" data-aos="zoom-in" data-aos-delay="400">Get Your Website</button>
+    <button onclick="alert('Contact us : Let’s build your website!')" data-aos="zoom-in" data-aos-delay="400">Get Your Website</button>
   </header>
 
   <section data-aos="fade-up" data-aos-delay="100" class="animated-mouse-cheese">
     <h2 data-aos="fade-up" data-aos-delay="150">Sir | CHizzBoy </h2>
     <div class="who-we-are-images">
-      <img src="/IMG_20230913_030712_365.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
+      <img src="IMG_20230913_030712_365.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
     </div>
     <p class="slogan" data-aos="fade-up" data-aos-delay="250">"Code. Connect. Create."</p>
     <p data-aos="fade-up" data-aos-delay="300">Small Giant Inv cc is a passion-driven Namibian brand blending tech, creativity, and hustle.</p>
     <div class="cheese">🧀</div>
     <div class="mouse">🐭</div>
-  <a href="/survey.html"> 
+  <a href="survey.html"> 
      <button onclick="alert('Let’s build your website!')" data-aos="zoom-in" data-aos-delay="400">Lets Play</button>
     </a>
     <div class="cheese">🧀</div>
@@ -329,11 +329,11 @@
         <p>Chizzy Studio <br><em>www.chizzystudio.com</em></p>
       </div>
       <div class="carousel-card" data-aos="zoom-in" data-aos-delay="300">
-        <img src="/pexels-divinetechygirl-1181461.jpg" alt="Project 2" />
+        <img src="pexels-divinetechygirl-1181461.jpg" alt="Project 2" />
         <p>Chizzy Tube <br><em>www.chizzytube.com</em></p>
       </div>
       <div class="carousel-card" data-aos="zoom-in" data-aos-delay="400">
-        <img src="/pexels-a-darmel-7743253.jpg" alt="Project 3" />
+        <img src="pexels-a-darmel-7743253.jpg" alt="Project 3" />
         <p>Chizzy E-Learning <br><em>www.chizzye-learning.com</em></p>
       </div>
     </div>
@@ -348,14 +348,14 @@
 
   <section data-aos="fade-left" data-aos-delay="100">
     <h2>Subscribe</h2>
-    <img src="/IMG_20230913_030712_365.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
+    <img src="IMG_20230913_030712_365.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
     <br>
     <button onclick="alert('Thanks for subscribing!')" data-aos="zoom-in" data-aos-delay="300">Subscribe</button>
 
     <input type="email" placeholder="Enter your email" style="padding:10px; border-radius:6px; max-width:300px; width:100%; margin-bottom:10px;" data-aos="fade-up" data-aos-delay="200">
     <br>
    <br>
-    <img src="/Small Giant - Vehicle Branding.png" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
+    <img src="Small Giant - Vehicle Branding.png" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
     
   </section>
 
