Update index.html images

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
   <section data-aos="fade-up" data-aos-delay="100" class="animated-mouse-cheese">
     <h2 data-aos="fade-up" data-aos-delay="150">Sir | CHizzBoy </h2>
     <div class="who-we-are-images">
-      <img src="IMG_20230913_030712_365.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
+      <img src="/images/IMG_20230913_030712_365.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
     </div>
     <p class="slogan" data-aos="fade-up" data-aos-delay="250">"Code. Connect. Create."</p>
     <p data-aos="fade-up" data-aos-delay="300">Small Giant Inv cc is a passion-driven Namibian brand blending tech, creativity, and hustle.</p>
@@ -325,11 +325,11 @@
     <p>Explore some of our exciting builds and collaborations.</p>
     <div style="display: flex; gap: 1em; overflow-x: auto;">
       <div class="carousel-card" data-aos="zoom-in" data-aos-delay="200">
-        <img src="/pexels-diva-plavalaguna-6147381.jpg" alt="Project 1" />
+        <img src="/images/pexels-diva-plavalaguna-6147381.jpg" alt="Project 1" />
         <p>Chizzy Studio <br><em>www.chizzystudio.com</em></p>
       </div>
       <div class="carousel-card" data-aos="zoom-in" data-aos-delay="300">
-        <img src="pexels-divinetechygirl-1181461.jpg" alt="Project 2" />
+        <img src="/images/pexels-divinetechygirl-1181461.jpg" alt="Project 2" />
         <p>Chizzy Tube <br><em>www.chizzytube.com</em></p>
       </div>
       <div class="carousel-card" data-aos="zoom-in" data-aos-delay="400">
@@ -341,21 +341,21 @@
 
   <section id="contact" data-aos="fade-up" data-aos-delay="100">
     <h2>Contact</h2>
-    <img src="/pexels-morningtrain-18105.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
+    <img src="/images/pexels-morningtrain-18105.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
     <p>Email: <a href="mailto:smallgiant105@gmail.com">smallgiant105@gmail.com</a></p>
     <p>Phone: +264-81-264-3563</p>
   </section>
 
   <section data-aos="fade-left" data-aos-delay="100">
     <h2>Subscribe</h2>
-    <img src="IMG_20230913_030712_365.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
+    <img src="/images/IMG_20230913_030712_365.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
     <br>
     <button onclick="alert('Thanks for subscribing!')" data-aos="zoom-in" data-aos-delay="300">Subscribe</button>
 
     <input type="email" placeholder="Enter your email" style="padding:10px; border-radius:6px; max-width:300px; width:100%; margin-bottom:10px;" data-aos="fade-up" data-aos-delay="200">
     <br>
    <br>
-    <img src="Small Giant - Vehicle Branding.png" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
+    <img src="/images/Small Giant - Vehicle Branding.png" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
     
   </section>
 
