--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
   <header data-aos="fade-up" data-aos-delay="100">
     <h1>WEB DEVELOPER</h1>
-    <img src="/images/pexels-sebastiaan9977-1097456.jpg" alt="Hero Banner" data-aos="zoom-in" data-aos-delay="200"/>
+    <img src="/pexels-sebastiaan9977-1097456.jpg" alt="Hero Banner" data-aos="zoom-in" data-aos-delay="200"/>
     <p data-aos="fade-up" data-aos-delay="300">Namibian coder, dancer, caller-connector, buy/sell expert, food lover, and chill master.</p>
     <button onclick="alert('Contact us : Let’s build your website!')" data-aos="zoom-in" data-aos-delay="400">Get Your Website</button>
   </header>
@@ -286,7 +286,7 @@
   <section data-aos="fade-up" data-aos-delay="100" class="animated-mouse-cheese">
     <h2 data-aos="fade-up" data-aos-delay="150">Sir | CHizzBoy </h2>
     <div class="who-we-are-images">
-      <img src="/images/IMG_20230913_030712_365.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
+      <img src="IMG_20230913_030712_365.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
     </div>
     <p class="slogan" data-aos="fade-up" data-aos-delay="250">"Code. Connect. Create."</p>
     <p data-aos="fade-up" data-aos-delay="300">Small Giant Inv cc is a passion-driven Namibian brand blending tech, creativity, and hustle.</p>
