--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
   <header data-aos="fade-up" data-aos-delay="100">
     <h1>WEB DEVELOPER</h1>
-    <img src="/pexels-sebastiaan9977-1097456.jpg" alt="Hero Banner" data-aos="zoom-in" data-aos-delay="200"/>
+    <img src="pexels-sebastiaan9977-1097456.jpg" alt="Hero Banner" data-aos="zoom-in" data-aos-delay="200"/>
     <p data-aos="fade-up" data-aos-delay="300">Namibian coder, dancer, caller-connector, buy/sell expert, food lover, and chill master.</p>
     <button onclick="alert('Contact us : Let’s build your website!')" data-aos="zoom-in" data-aos-delay="400">Get Your Website</button>
   </header>
@@ -348,14 +348,14 @@
 
   <section data-aos="fade-left" data-aos-delay="100">
     <h2>Subscribe</h2>
-    <img src="/images/IMG_20230913_030712_365.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
+    <img src="IMG_20230913_030712_365.jpg" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
     <br>
     <button onclick="alert('Thanks for subscribing!')" data-aos="zoom-in" data-aos-delay="300">Subscribe</button>
 
     <input type="email" placeholder="Enter your email" style="padding:10px; border-radius:6px; max-width:300px; width:100%; margin-bottom:10px;" data-aos="fade-up" data-aos-delay="200">
     <br>
    <br>
-    <img src="/images/Small Giant - Vehicle Branding.png" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
+    <img src="Small Giant - Vehicle Branding.png" alt="About Image 1" data-aos="zoom-in" data-aos-delay="200"/>
     
   </section>
 
